# src/shadowbox/server/server_access_key.ts
@@ -25,8 +25,8 @@ import {
   AccessKeyId,
   AccessKeyRepository,
   DataLimit,
+  ListenerType,
   ProxyParams,
-  WebSocketConfig,
 } from '../model/access_key';
 import * as errors from '../model/errors';
 import {ShadowsocksServer} from '../model/shadowsocks_server';
@@ -40,7 +40,7 @@ interface AccessKeyStorageJson {
   port: number;
   encryptionMethod?: string;
   dataLimit?: DataLimit;
-  websocket?: WebSocketConfig;
+  listeners?: ListenerType[];
 }
 
 // The configuration file format as json.
@@ -58,7 +58,7 @@ class ServerAccessKey implements AccessKey {
     public name: string,
     readonly proxyParams: ProxyParams,
     public dataLimit?: DataLimit,
-    public websocket?: WebSocketConfig
+    public listeners?: ListenerType[]
   ) {}
 }
 
@@ -80,7 +80,7 @@ function makeAccessKey(hostname: string, accessKeyJson: AccessKeyStorageJson): A
     accessKeyJson.name,
     proxyParams,
     accessKeyJson.dataLimit,
-    accessKeyJson.websocket
+    accessKeyJson.listeners
   );
 }
 
@@ -92,7 +92,7 @@ function accessKeyToStorageJson(accessKey: AccessKey): AccessKeyStorageJson {
     port: accessKey.proxyParams.portNumber,
     encryptionMethod: accessKey.proxyParams.encryptionMethod,
     dataLimit: accessKey.dataLimit,
-    websocket: accessKey.websocket,
+    listeners: accessKey.listeners,
   };
 }
 
@@ -239,8 +239,8 @@ export class ServerAccessKeyRepository implements AccessKeyRepository {
     };
     const name = params?.name ?? '';
     const dataLimit = params?.dataLimit;
-    const websocket = params?.websocket;
-    const accessKey = new ServerAccessKey(id, name, proxyParams, dataLimit, websocket);
+    const listeners = params?.listeners;
+    const accessKey = new ServerAccessKey(id, name, proxyParams, dataLimit, listeners);
     this.accessKeys.push(accessKey);
     this.saveAccessKeys();
     await this.updateServer();
@@ -331,22 +331,12 @@ export class ServerAccessKeyRepository implements AccessKeyRepository {
     const serverAccessKeys = this.accessKeys
       .filter((key) => !key.reachedDataLimit)
       .map((key) => {
-        const baseKey = {
+        return {
           id: key.id,
           port: key.proxyParams.portNumber,
           cipher: key.proxyParams.encryptionMethod,
           secret: key.proxyParams.password,
         };
-        
-        // Include WebSocket configuration if present
-        if (key.websocket) {
-          return {
-            ...baseKey,
-            websocket: key.websocket
-          };
-        }
-        
-        return baseKey;
       });
     return this.shadowsocksServer.update(serverAccessKeys);
   }
